--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ email:
 twitter_username: "MixIndentations"
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -53,7 +53,7 @@ show_image: false
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics:
+google_analytics: UA-159566932-1
 
 exclude:
   - CONTRIBUTING.md
